--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dynamic Random Text Example</title>
 </head>
 <body>
-    <h1>Random Text Generator</h1>
+    <h1>Random Text Generator2</h1>
     <p id="randomText"></p>
 
     <script>
