--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
     <script>
-        const texts = [
-            "Welcome to our website!",
-            "Check out our latest updates.",
-            "Enjoy browsing through our content.",
-            "We have a variety of topics for you!"
-        ];
-
-        const randomIndex = Math.floor(Math.random() * texts.length);
-        document.getElementById('randomText').innerText = texts[randomIndex];
+var textArray = [
+  'Hello Fred',
+  'Hello Jimmy',
+  'Hello Terry'
+];
+var randomNumber = Math.floor(Math.random() * textArray.length);
     </script>
