--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 var textArray = [
   'Hello Fred',
   'Hello Jimmy',
-  'Hello Terry'
+  'Hello Terry2'
 ];
 var randomNumber = Math.floor(Math.random() * textArray.length);
     </script>
