--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <script language="JavaScript">
-<!--
-var r_text = new Array ();
-r_text[0] = "All the leaves are brown";
-r_text[1] = "And the sky is grey";
-r_text[2] = "I've been for a walk";
-r_text[3] = "On a winter's day";
-r_text[4] = "I'd be safe and warm";
-r_text[5] = "If I was in L.A.";
-r_text[6] = "California dreaming, On such a winter's day";
-var i = Math.floor(7*Math.random())
+var textArray = [
+  'Hello Fred',
+  'Hello Jimmy',
+  'Hello Terry'
+];
+var randomNumber = Math.floor(Math.random() * textArray.length);
 
-document.write(r_text[i]);
+audioElement.setAttribute('src', textArray[randomNumber]);
 
-//-->
+<p id="text-here">This is where I want the text to go</p>
 </script>
