--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<script language="JavaScript">
-var textArray = [
-  
-  'Hello Fred',
-  
-];
-var randomNumber = Math.floor(Math.random() * textArray.length);
-
-audioElement.setAttribute('src', textArray[randomNumber]);
-
-<p id="text-here">This is where I want the text to go</p>
-</script>
+uno
+dos
+tres
