--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-uno
-dos
-tres
-cuatro
-cinco
+<script language="JavaScript">
+  
+const frutas = ["Manzana", "Banana", "Cereza", "Dátil", "Fresa"];
+
+// Genera un índice aleatorio basado en la longitud del array
+const indiceAleatorio = Math.floor(Math.random() * frutas.length);
+
+// Obtiene el elemento en el índice aleatorio
+const frutaAleatoria = frutas[indiceAleatorio];
+
+console.log(frutaAleatoria);
+
+</script>
