--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <script language="JavaScript">
   
-const frutas = ["Manzana", "Banana", "Cerez1a", "Frewsa", "Frewsa"];
+const frutas = [
+"Manzana", "Banana", "Cerez1a", "Frewsa", "Frewsa"
+];
 
 // Genera un índice aleatorio basado en la longitud del array
 const indiceAleatorio = Math.floor(Math.random() * frutas.length);
