--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script language="JavaScript">
   
 const frutas = [
-"Manzana", "Banana", "Cerez1a", "Frewsa", "Frewsa"
+"Manzana", "Frewsa"
 ];
 
 // Genera un índice aleatorio basado en la longitud del array
