--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <script>
-let textArray = [
+let = [
     'test1',
     'test3'
 ];
-
-let randomNumber = Math.floor(Math.random()*textArray.length);
-
-BTTActions.pasteString(textArray[randomNumber]);
-
-returnToBTT('');
     </script>
