--- a/index.html
+++ b/index.html
@@ -1,42 +1,42 @@
 <script>
 Clarence,
-Hora de aventura,
-Un show más,
-Inspector gadget,
-Peppa pig,
-La pantera rosa,
+Hora De Aventura,
+Un Show Más,
+Inspector Gadget,
+Peppa Pig,
+La Pantera Rosa,
 Bluey,
 Drake & Josh,
-Zeke y Luther,
+Zeke Y Luther,
 Pocoyo,
-My little pony,
-Buena suerte Charlie,
-Malcolm el de Enmedio,
-Fineas y ferb,
-Pinky y cerebro,
-Looney tunes,
-Gorge el curioso,
-Scooby doo,
-Los picapiedra,
-Jonny bravo,
+My Little Pony,
+Buena Suerte Charlie,
+Malcolm El De Enmedio,
+Fineas Y Ferb,
+Pinky Y Cerebro,
+Looney Tunes,
+Gorge El Curioso,
+Scooby Doo,
+Los Picapiedra,
+Jonny Bravo,
 Snoopy,
-Austin y Ally,
-El laboratorio de dexter,
-Chicas superpoderosas,
-La hormiga atómica,
-Ed,edd y eddi,
-Coraje el perro cobarde,
-El chavo del 8,
+Austin Y Ally,
+El Laboratorio De Dexter,
+Chicas Superpoderosas,
+La Hormiga Atómica,
+Ed,Edd Y Eddi,
+Coraje El Perro Cobarde,
+El Chavo Del 8,
 El Chapulin Colorado,
-Aquí no hay quien viva,
+Aquí No Hay Quien Viva,
 Happy Three Friends,
-Las tortugas ninjas,
+Las Tortugas Ninjas,
 Shin Chan,
 Doraemon,
 South Park,
-El show de los 70,
-El Principe del Rap,
-Los monsters,
-Billy y Mandy,
+El Show De Los 70,
+El Principe Del Rap,
+Los Monsters,
+Billy Y Mandy,
 iCarly,
 </script>
