--- a/ruleta.html
+++ b/ruleta.html
@@ -1,42 +1,27 @@
 <script>
-Clarence,
-Hora De Aventura,
-Un Show Más,
-Inspector Gadget,
-Peppa Pig,
-La Pantera Rosa,
-Bluey,
-Drake & Josh,
-Zeke Y Luther,
-Pocoyo,
-My Little Pony,
-Buena Suerte Charlie,
-Malcolm El De Enmedio,
-Fineas Y Ferb,
-Pinky Y Cerebro,
-Looney Tunes,
-Gorge El Curioso,
-Scooby Doo,
-Los Picapiedra,
-Jonny Bravo,
-Snoopy,
-Austin Y Ally,
-El Laboratorio De Dexter,
-Chicas Superpoderosas,
-La Hormiga Atómica,
-Ed,Edd Y Eddi,
-Coraje El Perro Cobarde,
-El Chavo Del 8,
-El Chapulin Colorado,
-Aquí No Hay Quien Viva,
-Happy Three Friends,
-Las Tortugas Ninjas,
-Shin Chan,
-Doraemon,
-South Park,
-El Show De Los 70,
-El Principe Del Rap,
-Los Monsters,
-Billy Y Mandy,
-iCarly,
+Cake Boss,
+Tacaños Extremos,
+Wipeout,
+H2O,
+Caso Cerrado,
+Brain Gámes,
+The Big Bang Teory,
+Office,
+La Rosa De Guadalupe,
+La Ley Y El Orden UVE,
+Csi Miami,
+Xena,
+Hercules Los Viajes Legendarios,
+Mentes Criminales,
+No Sabía Que Estaba Embarazada,
+Kilos Mortales,
+Animal Planet Al Extremo,
+Sala De Emergencia Historias Ineditas,
+Vestido De Novia,
+Alerta Aeropuerto,
+Mayday Catástrofes Aéreas,
+Mi Extraña Adición,
+Preso En El Extranjero,
+Anthony Bourdain,
+Numeros,
 </script>
