--- a/saludos.html
+++ b/saludos.html
@@ -1,3 +1,13 @@
 <script>
-
+¡Que gusto verte!,
+¡Pensé en ti todo el día!,
+¡Gracias por estár aquí!,
+¡Es un honor que nos acompañes!,
+¡Te estuve esperando!,
+¡Te he extrañado mucho!,
+¿¡Por qué has tardado tanto!?,
+¡Me hacé feliz verte!,
+¡Me emociona leerte!,
+¡Hoy quiero leerte mucho!,
+¡Haces mejor mi día al estár aquí!,
 </script>
